#1 Созданы шапка сайта и добавлены медиазапросы

--- a/index.html
+++ b/index.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
+
 <body>
-  
+  <header class="header">
+    <div class="container header_container">
+      <a href="#" class="logo">
+        <img src="img/Logo.svg" alt="Logo">
+      </a>
+      <nav class="menu">
+        <a href="#" class="menu_list">Home</a>
+        <a href="#" class="menu_list">Courses</a>
+        <a href="#" class="menu_list">Blog</a>
+        <a href="#" class="menu_list">About Us</a>
+        <a href="#" class="menu_list">Contact Us</a>
+        <a href="#" class="basket"><span>12</span></a>
+      </nav>
+      <div class="header_enter">
+        <a href="#" class="header_enter_contributor">Be A Contributor</a>
+        <a href="#" class="header_enter_login">Log in</a>
+      </div>
+      <div class="burger_menu">
+        <div class="burger_menu_list"></div>
+        <div class="burger_menu_list"></div>
+        <div class="burger_menu_list"></div>
+      </div>
+    </div>
+  </header>
 </body>
+
 </html>
