#1 Создан второй блок и добавлены медиазапросы

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <script src="js/jquery-3.5.1.min.js"></script>
+  <script src="js/script.js"></script>
 </head>
 
 <body>
@@ -36,6 +38,12 @@
       </div>
     </div>
   </header>
+  <div class="content">
+    <div class="container content_container">
+      <h2 class="content_title">Browse Thousands of Our Video Tutorials Curated Only for you.</h2>
+      <p class="content_text">Access all tutorials and resources when you become a premium member of Semaj Africa.</p>
+    </div>
+  </div>
 </body>
 
 </html>
