#1 Создан третий блок страницы, использованы гриды. Добавлены медиазапросы

--- a/index.html
+++ b/index.html
@@ -44,6 +44,112 @@
       <p class="content_text">Access all tutorials and resources when you become a premium member of Semaj Africa.</p>
     </div>
   </div>
+
+  <div class="container">
+    <div class="promo">
+      <div class="promo_wrappers">
+        <input type="text" class="promo_search" placeholder="Search for Courses i.e web-development">
+      </div>
+      <div class="promo_wrappers">
+        <div class="promo_wrappers_wrapper">
+          <div class="promo_wrappers_wrapper_items">
+            <p class="promo_wrappers_wrapper_text">Showing 1–8 of 10 results</p>
+            <p class="promo_wrappers_wrapper_text">Show 6 12 16</p>
+            <div class="promo_wrappers_wrapper_icons">
+              <a href="#" class="promo_wrappers_wrapper_icon list"></a>
+              <a href="#" class="promo_wrappers_wrapper_icon table"></a>
+            </div>
+          </div>
+          <div class="promo_wrappers_wrapper_items">
+            <div class="promo_wrappers_wrapper_item">
+              <span class="promo_wrappers_wrapper_plan">Free</span>
+              <h3 class="promo_wrapper_item_text">Become A Social <br> Media Expert</h3>
+            </div>
+            <div class="promo_wrappers_wrapper_item">
+              <span class="promo_wrappers_wrapper_plan">Premium</span>
+              <h3 class="promo_wrapper_item_text">Advance Your <br> 3d Modelling Skill</h3>
+            </div>
+            <div class="promo_wrappers_wrapper_item">
+              <span class="promo_wrappers_wrapper_plan">Free</span>
+              <h3 class="promo_wrapper_item_text">The Art Of Growing <br> Relationship</h3>
+            </div>
+            <div class="promo_wrappers_wrapper_item">
+              <span class="promo_wrappers_wrapper_plan">Premium</span>
+              <h3 class="promo_wrapper_item_text">Skills Needed In <br> Becoming A Designer</h3>
+            </div>
+            <div class="promo_wrappers_wrapper_item">
+              <span class="promo_wrappers_wrapper_plan">Premium</span>
+              <h3 class="promo_wrapper_item_text">Learn Logo Design</h3>
+            </div>
+            <div class="promo_wrappers_wrapper_item">
+              <span class="promo_wrappers_wrapper_plan">Free</span>
+              <h3 class="promo_wrapper_item_text">Become A Web Developer</h3>
+            </div>
+            <div class="promo_wrappers_wrapper_item">
+              <span class="promo_wrappers_wrapper_plan">Premium</span>
+              <h3 class="promo_wrapper_item_text">Embark On The Journey Of Becoming <br> An Artist </h3>
+            </div>
+            <div class="promo_wrappers_wrapper_item">
+              <span class="promo_wrappers_wrapper_plan">Free</span>
+              <h3 class="promo_wrapper_item_text">4 Weeks Photography <br> Bootcamp</h3>
+            </div>
+            <div class="promo_wrappers_wrapper_item">
+              <span class="promo_wrappers_wrapper_plan">Premium</span>
+              <h3 class="promo_wrapper_item_text">Learn Organization <br> Management</h3>
+            </div>
+            <div class="promo_wrappers_wrapper_item">
+              <span class="promo_wrappers_wrapper_plan">Free</span>
+              <h3 class="promo_wrapper_item_text">3 in 1 Course Of Becoming <br> A Makeup Artist</h3>
+            </div>
+            <div class="promo_wrappers_wrapper_item">
+              <span class="promo_wrappers_wrapper_plan">Free</span>
+              <h3 class="promo_wrapper_item_text">How To Have A Good <br> Listening Ear For Music</h3>
+            </div>
+            <div class="promo_wrappers_wrapper_item">
+              <span class="promo_wrappers_wrapper_plan">Premium</span>
+              <h3 class="promo_wrapper_item_text">Become A Social <br> Media Expert</h3>
+            </div>
+            <div class="promo_wrappers_wrapper_item">
+              <span class="promo_wrappers_wrapper_plan">Free</span>
+              <h3 class="promo_wrapper_item_text">Become A Web Developer</h3>
+            </div>
+            <div class="promo_wrappers_wrapper_item">
+              <span class="promo_wrappers_wrapper_plan">Premium</span>
+              <h3 class="promo_wrapper_item_text">Advance Your <br> 3d Modelling Skill</h3>
+            </div>
+            <div class="promo_wrappers_wrapper_item">
+              <span class="promo_wrappers_wrapper_plan">Free</span>
+              <h3 class="promo_wrapper_item_text">The Art Of Growing <br> Relationship</h3>
+            </div>
+          </div>
+          <div class="promo_wrapper_items">
+            <div class="promo_wrappers_pages">
+              <a href="#" class="promo_wrappers_pages_item">01</a>
+              <a href="#" class="promo_wrappers_pages_item">02</a>
+              <a href="#" class="promo_wrappers_pages_item">...</a>
+              <a href="#" class="promo_wrappers_pages_item">Next</a>
+            </div>
+          </div>
+        </div>
+        <div class="promo_wrappers_wrapper">
+          <h3 class="promo_wrappers_wrapper_title">All Courses</h3>
+          <a href="#" class="promo_wrappers_wrapper_link">Web Development (2908)</a>
+          <a href="#" class="promo_wrappers_wrapper_link">Designs (11293)</a>
+          <a href="#" class="promo_wrappers_wrapper_link">Photography (2230)</a>
+          <a href="#" class="promo_wrappers_wrapper_link">3d Artist (9828)</a>
+          <a href="#" class="promo_wrappers_wrapper_link">Motion Graphics (8223)</a>
+          <a href="#" class="promo_wrappers_wrapper_link">Software Engineer (1001)</a>
+          <a href="#" class="promo_wrappers_wrapper_link">UI/ UX RoadMap (734)</a>
+          <a href="#" class="promo_wrappers_wrapper_link">Sound & Music (1223)</a>
+          <a href="#" class="promo_wrappers_wrapper_link">Digital Marketing (382)</a>
+          <h3 class="promo_wrappers_wrapper_title">Course Type</h3>
+          <div class="promo_wrappers_wrapper_plans">
+            <a href="#" class="promo_wrappers_wrapper_plan_item">Paid</a>
+            <a href="#" class="promo_wrappers_wrapper_plan_item">Free</a>
+          </div>
+          <a href="#" class="promo_wrappers_wrapper_button">Filter</a>
+        </div>
+
 </body>
 
 </html>
